Improve rabbitmq message handler
